--- a/about.html
+++ b/about.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transparent Navbar</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-
     <div class="navbar">
         <a href="https://www.techniekcollegerotterdam.nl/"><img src="img/tcrlogo.png" alt="TCR"></a>
         <a href="index.html">Home</a>
@@ -22,12 +21,5 @@
         </div>
         <a href="contact.html">Contact</a>
     </div>
-
-    <div class="content">
-        <h1>Welkom op onze website</h1>
-        <p>Deze website is gemaakt vanuit een opdracht van school</p>
-        <p>Het doel van deze website is om u te laten zien wat wij voor games kunnen maken!</p>
-    </div>
-
 </body>
 </html>
