--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
     <div class="navbar">
         <a href="https://www.techniekcollegerotterdam.nl/"><img src="img/tcrlogo.png" alt="TCR"></a>
         <a href="index.html">Home</a>
-        <a href="about.html">Over ons</a>
+        <a href="about.html">Diensten</a>
         <div class="dropdown">
-            <button class="dropbtn">Diensten</button>
+            <button class="dropbtn">Over Ons</button>
             <div class="dropdown-content">
-                <a href="#">Game development</a>
-                <a href="#">Web development</a>
-                <a href="#">App development</a>
+                <a href="#">Milan van Deelen</a>
+                <a href="#">Yvan van Dijk</a>
+                <a href="#">Michael Davelaar</a>
             </div>
         </div>
         <a href="contact.html">Contact</a>
