--- a/about.html
+++ b/about.html
@@ -14,9 +14,11 @@
         <div class="dropdown">
             <button class="dropbtn">Over Ons</button>
             <div class="dropdown-content">
+                <a href="about.html">Main Page</a>
                 <a href="#">Milan van Deelen</a>
                 <a href="#">Yvan van Dijk</a>
                 <a href="#">Michael Davelaar</a>
+                <a href="#">Goed Doel</a>
             </div>
         </div>
         <a href="contact.html">Contact</a>
