--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,14 @@
         <a href="https://www.techniekcollegerotterdam.nl/"><img src="img/tcrlogo.png" alt="TCR"></a>
         <a href="index.html">Home</a>
         <a href="about.html">Diensten</a>
-        <div class="dropdown">
-            <button class="dropbtn">Over Ons</button>
-            <div class="dropdown-content">
-                <a href="#">Milan van Deelen</a>
-                <a href="#">Yvan van Dijk</a>
-                <a href="#">Michael Davelaar</a>
-            </div>
+        <button class="dropbtn">Over Ons</button>
+        <div class="dropdown-content">
+            <a href="about.html">Main Page</a>
+            <a href="#">Milan van Deelen</a>
+            <a href="#">Yvan van Dijk</a>
+            <a href="#">Michael Davelaar</a>
+            <a href="#">Goed Doel</a>
+        </div>
         </div>
         <a href="contact.html">Contact</a>
     </div>
