--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div class="dropdown">
             <button class="dropbtn">Over Ons</button>
             <div class="dropdown-content">
-                <a href="about.html">Main Page</a>
+                <a href="about.html">Wie zijn wij</a>
                 <a href="#">Milan van Deelen</a>
                 <a href="#">Yvan van Dijk</a>
                 <a href="#">Michael Davelaar</a>
