--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <a href="about.html">Diensten</a>
         <button class="dropbtn">Over Ons</button>
         <div class="dropdown-content">
-            <a href="about.html">Main Page</a>
+            <a href="about.html">Wie zijn wij</a>
             <a href="#">Milan van Deelen</a>
             <a href="#">Yvan van Dijk</a>
             <a href="#">Michael Davelaar</a>
