--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <div class="dropdown-content">
                 <a href="about.html">Wie zijn wij</a>
                 <a href="#">Milan van Deelen</a>
-                <a href="#">Yvan van Dijk noob</a>
+                <a href="#">Yvan van Dijk</a>
                 <a href="#">Michael Davelaar</a>
                 <a href="#">Goed Doel</a>
             </div>
