--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">Diensten</a>
         <div class="dropdown">
-            <button class="dropbtn">Over de drie autisten</button>
+            <button class="dropbtn">Over Ons</button>
             <div class="dropdown-content">
                 <a href="about.html">Wie zijn wij</a>
                 <a href="#">Milan van Deelen</a>
