--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <a href="about.html">Wie zijn wij</a>
             <a href="#">Milan van Deelen</a>
             <a href="#">Yvan van Dijk</a>
-            <a href="#">Michael Davelaar</a>
+            <a href="#">Michael Davelaar is wit</a>
             <a href="#">Goed Doel</a>
         </div>
         </div>
