--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
         <a href="https://www.techniekcollegerotterdam.nl/"><img class="pipi" src="img/tcrlogo.png" alt="TCR"></a>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">Over ons</a>
             <div class="dropdown">
-                <button class="dropbtn">Diensten</button>
+            <button class="dropbtn">Games</button>
+            <div class="dropdown-content">
+                <a href="#">Pong</a>
+                <a href="#">Snake</a>
+                <a href="#">Duck Hunt</a>
+            </div>
+        </div>
+            <div class="dropdown">
+                <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
-                    <a href="#">Game development</a>
-                    <a href="#">Web development</a>
-                    <a href="#">App development</a>
+                    <a href="#">Wie zijn wij</a>
+                    <a href="#">Milan van Deelen</a>
+                    <a href="#">Michael Davelaar</a>
+                    <a href="#">Yvan van Dijk</a>
+                    <a href="#">Goed Doel</a>
                 </div>
             </div>
             <a href="contact.html">Contact</a>
