--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,29 @@
 <body>
 
     <div class="navbar">
-        <a href="https://www.techniekcollegerotterdam.nl/"><img src="img/tcrlogo.png" alt="TCR"></a>
-        <a href="index.html">Home</a>
-        <a href="about.html">Diensten</a>
-        <button class="dropbtn">Over Ons</button>
-        <div class="dropdown-content">
-            <a href="about.html">Wie zijn wij</a>
-            <a href="#">Milan van Deelen</a>
-            <a href="#">Yvan van Dijk</a>
-            <a href="#">Michael Davelaar</a>
-            <a href="#">Goed Doel</a>
+        <a href="https://www.techniekcollegerotterdam.nl/"><img class="pipi" src="img/tcrlogo.png" alt="TCR"></a>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <div class="dropdown">
+            <button class="dropbtn">Games</button>
+            <div class="dropdown-content">
+                <a href="#">Pong</a>
+                <a href="#">Snake</a>
+                <a href="#">Duck Hunt</a>
+            </div>
         </div>
+            <div class="dropdown">
+                <button class="dropbtn">Over Ons</button>
+                <div class="dropdown-content">
+                    <a href="#">Wie zijn wij</a>
+                    <a href="#">Milan van Deelen</a>
+                    <a href="#">Michael Davelaar</a>
+                    <a href="#">Yvan van Dijk</a>
+                    <a href="#">Goed Doel</a>
+                </div>
+            </div>
+            <a href="contact.html">Contact</a>
         </div>
-        <a href="contact.html">Contact</a>
     </div>
 
     <div class="content">
