--- a/goeddoel.html
+++ b/goeddoel.html
@@ -11,19 +11,40 @@
         <a href="https://www.techniekcollegerotterdam.nl/"><img class="pipi" src="img/tcrlogo.png" alt="TCR"></a>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">Over ons</a>
             <div class="dropdown">
-                <button class="dropbtn">Diensten</button>
+            <button class="dropbtn">Games</button>
+            <div class="dropdown-content">
+                <a href="#">Pong</a>
+                <a href="game.html">Snake</a>
+                <a href="#">Duck Hunt</a>
+            </div>
+        </div>
+            <div class="dropdown">
+                <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
-                    <a href="#">Game development</a>
-                    <a href="#">Web development</a>
-                    <a href="#">App development</a>
+                    <a href="#">Wie zijn wij</a>
+                    <a href="#">Milan van Deelen</a>
+                    <a href="#">Michael Davelaar</a>
+                    <a href="yvan.html">Yvan van Dijk</a>
+                    <a href="goeddoel.html">Goed Doel Yvan</a>
+                    <a href="#">Goed Doel Milan</a>
+                    <a href="#">Goed Doel Michael</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">waarom</button>
+                <div class="dropdown-content">
+                    <a href="#">waarom dit Doel Michael</a> 
+                    <a href="#">waarom dit Doel Milan</a>   
+                    <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
+                    <a href="#">waarom dit spel Michael</a>  
+                    <a href="#">waarom dit spel Milan</a> 
+                    <a href="waaromgame.html">waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
         </div>
     </div>
-
    
     <header>
         <h1>Wereld Natuur Fonds</h1>
