--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <a href="#">Wie zijn wij</a>
                     <a href="#">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
-                    <a href="#">Yvan van Dijk</a>
-                    <a href="#">Goed Doel</a>
+                    <a href="yvan.html">Yvan van Dijk</a>
+                    <a href="goeddoel.html">Goed Doel Yvan</a>
+                    <a href="#">Goed Doel Milan</a>
+                    <a href="#">Goed Doel Michael</a>
                 </div>
             </div>
             <a href="contact.html">Contact</a>
