--- a/waaromgame.html
+++ b/waaromgame.html
@@ -52,13 +52,17 @@
 
     <section>
         <p>Beste spelers en programmeerliefhebbers,</p>
+    </section>
 
+    <section>
         <p>Ik wil graag met jullie delen waarom ik ervoor heb gekozen om een Snake-game te ontwikkelen. Het ontwerpen en bouwen van een Snake-game gaat verder dan alleen het plezier van het spelen; het is een uitdagend en leerzaam proces dat verschillende aspecten van programmeren en game-ontwikkeling omvat.</p>
-
+</section>
+<section>
         <p>Ten eerste biedt het ontwikkelen van een Snake-game een geweldige kans om mijn programmeervaardigheden te verbeteren. Het omvat concepten zoals gebruikersinvoer, logica voor het verplaatsen van objecten op het scherm, het bijhouden van scores en het afhandelen van spelgebeurtenissen. Dit project stelt me in staat om te groeien als programmeur en nieuwe technieken te verkennen.</p>
 
         <p>Bovendien heeft de Snake-game een eenvoudige en herkenbare gameplay, waardoor het toegankelijk is voor zowel beginners als ervaren gamers. Het is een klassieker die nostalgie oproept en tegelijkertijd een perfecte speeltuin biedt om te experimenteren met nieuwe ideeën en functies.</p>
-
+</section>
+<section>
         <p>Door deze game te creëren, hoop ik niet alleen mijn eigen vaardigheden te verbeteren, maar ook anderen te inspireren om te experimenteren met game-ontwikkeling. Games zijn een geweldige manier om creativiteit en probleemoplossend denken te bevorderen, en ik nodig jullie uit om samen met mij dit leerzame en leuke avontuur te ervaren.</p>
 
         <p>Veel gameplezier!</p>
