--- a/about.html
+++ b/about.html
@@ -32,5 +32,10 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
+    <div id="pong-game-container">
+        <canvas id="pongCanvas" width="800" height="400" style="border:1px solid #000000;"></canvas>
+        <button id="startPong">START</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
