--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="#">Pong</a>
+                <a href="about.html">Pong</a>
                 <a href="#">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
