--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
                     <a href="#">Milan van Deelen</a>
-                    <a href="#">Michael Davelaar</a>
+                    <a href="Michael.html">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
@@ -41,6 +41,5 @@
         <p>Deze website is gemaakt vanuit een opdracht van school</p>
         <p>Het doel van deze website is om u te laten zien wat wij voor games kunnen maken!</p>
     </div>
-
 </body>
 </html>
