--- a/Michael.html
+++ b/Michael.html
@@ -62,29 +62,46 @@
   <center>  
 
     <div class="media-container">
-        <button class="button button1" onclick="toggleMedia('video1')">Video 1</button>
+        <button class="button button1" onclick="toggleMedia('video1')">Japanse car meet in Assen 1</button>
         <video id="video1" class="hidden" controls width="360" height="360">
             <source src="img/Japfest.mp4" type="video/mp4">    
         </video>
     </div>
 
     <div class="media-container">
-        <button class="button button1" onclick="toggleMedia('video2')">Video 2</button>
+        <button class="button button1" onclick="toggleMedia('video2')">Japanse car meet in Assen 2</button>
         <video id="video2" class="hidden" controls width="360" height="360">
             <source src="img/Japfest2.mp4" type="video/mp4">
         </video>
     </div>
 
     <div class="media-container">
-        <button class="button button1" onclick="toggleMedia('video3')">Video 3</button>
+        <button class="button button1" onclick="toggleMedia('video3')">Game clip</button>
         <video id="video3" class="hidden" controls width="750" height="360">
             <source src="img/Clippie.mp4" type="video/mp4">
         </video>
     </div>
+    <div class="media-container">
+        <button class="button button1" onclick="toggleMedia('video4')">Game clip 2</button>
+        <video id="video4" class="hidden" controls width="750" height="360">
+            <source src="img/Clippie2.mp4" type="video/mp4">
+        </video>
+    </div>
 
     <div class="media-container">
-        <button class="button button2" onclick="toggleMedia('foto1')">Foto 1</button>
+        <button class="button button2" onclick="toggleMedia('foto1')">Foto Fast & Furious autos</button>
         <img id="foto1" class="hidden" src="img/FastNFurious.jpg" alt="Officiel autos van Fast & Furious" width="450">
+    </div>
+    <div class="media-container">
+        <button class="button button2" onclick="toggleMedia('foto2')">Loss streak...</button>
+        <img id="foto2" class="hidden" src="img/LossStreak.png" alt="Loss streak" width="600">
+    </div>
+    <div class="media-container">
+        <button class="button button2" onclick="toggleMedia('tekst1')">Contactinformatie</button>
+        <p id="tekst1" class="hidden"><b>
+            E-Mail: 9015139@student.zadkine.nl
+            Telefoonnummer: 0648610310
+        </b></p>
     </div>
 </center>
   <table>
