Doel en info site ge edit

--- a/GoedDoelMichael.html
+++ b/GoedDoelMichael.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="yvan.css">
+    <title>Goed doel Michael</title>
+    <link rel="stylesheet" href="Michael.css">
+    <link rel="icon" href="img/monke.gif" type="image/gif">
 </head>
 <body>
     <div class="navbar">
@@ -28,13 +29,13 @@
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
-                    <a href="#">Goed Doel Michael</a>
+                    <a href="GoedDoelMichael.html">Goed Doel Michael</a>
                 </div>
             </div>
             <div class="dropdown">
                 <button class="dropbtn">waarom</button>
                 <div class="dropdown-content">
-                    <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
+                    <a href="#">waarom dit Doel Michael</a> 
                     <a href="#">waarom dit Doel Milan</a>   
                     <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
                     <a href="#">waarom dit spel Michael</a>  
@@ -45,25 +46,15 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
+    <h1>Kika Kinderkanker</h1>
+    <h2>Onderzoek naar Kinderkanker</h2>
+    <p>Jaarlijks krijgen bijna 600 kinderen in Nederland kanker. Inmiddels overleeft 81% van deze kinderen de eerste vijf jaar na de diagnose. Mede dankzij de onderzoeken die KiKa financiert. Want zo’n 20 jaar geleden lag dit nog rond de 72%. Een duidelijk bewijs dat onderzoek écht helpt en 100% kans op genezing steeds dichterbij komt.  
 
-    <header>
-        <h1>Waarom Ik Het Wereld Natuur Fonds Steun</h1>
-    </header>
-
-    <section>
-        <p>Beste vrienden,</p>
-
-        <p>Ik wil graag met jullie delen waarom ik heb gekozen om het Wereld Natuur Fonds te steunen. In een tijd waarin onze planeet wordt geconfronteerd met ernstige milieuproblemen, geloof ik dat het cruciaal is om actie te ondernemen en de verantwoordelijkheid te nemen voor het behoud van onze natuurlijke wereld.</p>
-
-        <p>Het Wereld Natuur Fonds is voor mij een symbool van hoop en positieve verandering. Door hun wereldwijde inspanningen op het gebied van biodiversiteit, duurzame ontwikkeling en klimaatverandering, ben ik ervan overtuigd dat mijn steun bijdraagt aan een gezondere en evenwichtiger planeet voor toekomstige generaties.</p>
-
-        <p>Elke donatie, groot of klein, draagt bij aan de bescherming van bedreigde diersoorten, het behoud van waardevolle ecosystemen en het aanpakken van de urgentie van klimaatverandering. Samen kunnen we een verschil maken en een positieve impact hebben op onze wereld.</p>
-
-        <p>Ik nodig jullie uit om je ook aan te sluiten bij deze missie voor een duurzamere en meer evenwichtige toekomst. Laten we samen werken aan een wereld waarin mens en natuur in harmonie leven.</p>
-
-        <p>Met vriendelijke groet,</p>
-        <p>[Jouw Naam]</p>
-    </section>
-
+        Deze onderzoeken waarin KiKa investeert richten zich op verschillende thema's. Denk aan betere medicijnen, minder pijn tijdens behandelingen, meer kans op genezing en een hogere kwaliteit van leven voor patiënten, ook na behandeling. Ook geven we voorlichting over kinderkanker. KiKa is het enige goede doel in Nederland dat investeert in onderzoek dat zich specifiek richt op alle vormen van kinderkanker.
+         
+        Bij al dit mooie werk krijgen we steun van particuliere donateurs, actievoerders, bedrijven en stichtingen.  
+         </p>
+         <br>
+         <li><a href="https://secure.kika.nl/doneer?donation_type=one_off">Doe een donatie naar Kika</a></li>
 </body>
 </html>
