--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
-                    <a href="#">Milan van Deelen</a>
+                    <a href="milan.html">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
                     <a href="#">Yvan van Dijk</a>
                     <a href="#">Goed Doel</a>
