--- a/game.html
+++ b/game.html
@@ -23,23 +23,23 @@
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
-                    <a href="#">Milan van Deelen</a>
+                    <a href="milan.html">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
-                    <a href="goeddoel.html">Goed Doel Yvan</a>
+                    <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
                     <a href="#">Goed Doel Michael</a>
                 </div>
             </div>
             <div class="dropdown">
-                <button class="dropbtn">waarom</button>
+                <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-                    <a href="#">waarom dit Doel Michael</a> 
-                    <a href="#">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
-                    <a href="#">waarom dit spel Michael</a>  
-                    <a href="#">waarom dit spel Milan</a> 
-                    <a href="waaromgame.html">waarom dit spel Yvan</a>   
+                    <a href="#">Waarom dit Doel Michael</a> 
+                    <a href="#">Waarom dit Doel Milan</a>   
+                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
+                    <a href="#">Waarom dit spel Michael</a>  
+                    <a href="#">Waarom dit spel Milan</a> 
+                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
