--- a/milan.html
+++ b/milan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="yvan.css">
+    <link rel="stylesheet" href="milan.css">
 </head>
 <body>
     <div class="navbar">
@@ -45,67 +45,41 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
+    <div class="button-menu">
+        <h1>Menu</h1>
+        <button onclick="showDiv('intro')">Toon Introductie</button>
+        <button onclick="hideDiv('intro')">Verberg Introductie</button>
+        <button onclick="showDiv('hobby')">Toon Hobby's</button>
+        <button onclick="hideDiv('hobby')">Verberg Hobby's</button>
+        <button onclick="showDiv('foto')">Toon Foto's & Videos</button>
+        <button onclick="hideDiv('foto')">Verberg Foto's & Videos</button>
+    </div>    
+    <div class="intro" id="intro">
+      <h1>Milan van Deelen</h1>  
+      <p> Hallo! Ik ben Milan van Deelen, en ik ben 17 jaar oud. Ik woon alleen bij mijn Moeder.</p>
+      <p>Ik doe op het moment een opleiding: Software Development, en daarnaast ben ik ook vrijwilliger voor een game bedrijf als Systeem Admin.</p>
+      <p>Ik doe deze opleiding omdat ik me vanaf jongs af aan geinteresseerd heb in Development & Coderen, en alles binnen de ICT. En wil mezelf hier meer in verdiepen.</p>
+    </div>
+    <div class="hobby" id="hobby">
+      <h2>Hobby's:</h2>
+      <p>Net zoals elk normaal mens heb ik ook een aantal hobby's! Dit zijn ze:</p>
+      <p>Voetbal</p>
+      <p>Gamen</p>
+      <p>Wandelen</p>
+      <br>
+      <p>Mijn intresse in de Game Development is erg hoog, daarom ben ik ook bezig met een eigen server te maken binnen in een game!</p>
+    </div>
 
-    <h1 class="h1-bg">Yvan</h1>
-<p>Hallo,</p> 
-<p>Ik ben Yvan van Dijk en ik ben 16 jaar oud, Ik woon samen mijn met ouders en met mijn zus.</p> 
-<p>Ik doe momenteel de opleinding niveau 4 SOD (Software Development).</p>
-<p>Ik heb voor deze opleinding gekozen omdat ik mijzelf wil verdiepen in coderen en ik denk dat dit de beste start leek voor mij.</p>
-<p>Ik heb zelf al best wat ervaring met coderen, maar op mijn oude school als ik een vraag had, werd ik genegeert. Ik hoop dat ik hier goed wordt geholpen als ik vragen heb.</p>
-<br>
-<p>Mijn hobby's zijn:</p>
-<ul id="some_shit">
-    <li>Coderen</li>
-    <li>Badmintonen</li>
-    <li>Eten</li>
-
-</ul>
-<p>Ik game best vaak op een dag, vooral met vrienden speel ik Sea Of Thieves en GTA V.</p>
-<p>Ook vind ik het coderen leuk om soms even te doen als ik mij verveel
-ook doe ik badminton momenteel speel ik bij de senioren bij de club PBC boomgaardshoek. Ik ben een keer kampieon geworden
-ik vind eten ook geweldig, mijn bijnaam thuis is de prullebak.</p>
-<table>
-    <tr>
-        <th></th>
-        <th>Beste hobby</th>
-        <th>Waarom</th>
-        <th>wat doet<br> het met mij</th>
-    </tr>
-    <tr>
-        <th>1#</th>
-        <td rowspan="2">badminton</td>
-        <td>spelen is <br>gewoon geweldig</td>
-        <td>het maakt mij blij</td>
-    </tr>
-    <tr>
-        <th>2#</th>
-        <td>training</td>
-        <td>maakt mij blij</td>
-    </tr>
-    <tr>
-        <th>3#</th>
-        <td colspan="3">ik hou van mij leven :)</td>
-    </tr>
-    <tr>
-        <th>4#</th>
-        <td>gamen</td>
-        <td>je ben<br> even weg</td>
-        <td>het laat <br>tijd voorbij vliegen</td>
-    </tr>
-    <tr>
-        <th>5#</th>
-        <td>eten</td>
-        <td>het is lekker</td>
-        <td>maakt mij<br> heel erg blij</td>
-    </tr>
-</table>
-
-<img src="img/kampioen foto.jpg" alt="yvan zijn kampieon foto" width="550" height="350">
+<div class="foto" id="foto">
 <video controls width="360" height="360">
     <source src="img/VID20230722212524 (1).mp4" type="video/mp4">
 </video>
+<img src="img/kampioen foto.jpg" alt="yvan zijn kampieon foto" width="550" height="350">
     <video controls width="360" height="360">
-        <source src="img/hq5rkdf52WgiPBhGpAGhLg.mp4" type="video/mp4">
+        <source src="img/hq5rkdf52WgiPBhGpAGhLg.mp4" type="video/mp4" >
         </video>  
-</body>
+    </div>
+    <script src="milan.js"></script>
+
+    </body>
 </html>
