--- a/waaromdoel-yvan.html
+++ b/waaromdoel-yvan.html
@@ -23,23 +23,23 @@
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
-                    <a href="#">Milan van Deelen</a>
+                    <a href="milan.html">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
-                    <a href="goeddoel.html">Goed Doel Yvan</a>
+                    <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
                     <a href="#">Goed Doel Michael</a>
                 </div>
             </div>
             <div class="dropdown">
-                <button class="dropbtn">waarom</button>
+                <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-                    <a href="#">waarom dit Doel Michael</a> 
-                    <a href="#">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
-                    <a href="#">waarom dit spel Michael</a>  
-                    <a href="#">waarom dit spel Milan</a> 
-                    <a href="waaromgame.html">waarom dit spel Yvan</a>   
+                    <a href="#">Waarom dit Doel Michael</a> 
+                    <a href="#">Waarom dit Doel Milan</a>   
+                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
+                    <a href="#">Waarom dit spel Michael</a>  
+                    <a href="#">Waarom dit spel Milan</a> 
+                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
@@ -53,7 +53,7 @@
     <section>
         <p>Beste vrienden,</p>
 
-        <p>Ik wil graag met jullie delen waarom ik heb gekozen om het Wereld Natuur Fonds te steunen. In een tijd waarin onze planeet wordt geconfronteerd met ernstige milieuproblemen, geloof ik dat het cruciaal is om actie te ondernemen en de verantwoordelijkheid te nemen voor het behoud van onze natuurlijke wereld.</p>
+        <p>Ik wil graag met jullie delen Waarom ik heb gekozen om het Wereld Natuur Fonds te steunen. In een tijd waarin onze planeet wordt geconfronteerd met ernstige milieuproblemen, geloof ik dat het cruciaal is om actie te ondernemen en de verantwoordelijkheid te nemen voor het behoud van onze natuurlijke wereld.</p>
 
         <p>Het Wereld Natuur Fonds is voor mij een symbool van hoop en positieve verandering. Door hun wereldwijde inspanningen op het gebied van biodiversiteit, duurzame ontwikkeling en klimaatverandering, ben ik ervan overtuigd dat mijn steun bijdraagt aan een gezondere en evenwichtiger planeet voor toekomstige generaties.</p>
 
