--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
-                    <a href="#">Milan van Deelen</a>
+                    <a href="milan.html">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
-                    <a href="goeddoel.html">Goed Doel Yvan</a>
+                    <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
                     <a href="#">Goed Doel Michael</a>
                 </div>
