--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                 <a href="about.html">Wie zijn wij</a>
                 <a href="#">Milan van Deelen</a>
                 <a href="#">Yvan van Dijk</a>
-                <a href="#">Michael Davelaar</a>
+                <a href="Michael.html">Michael Davelaar</a>
                 <a href="#">Goed Doel</a>
             </div>
             <a href="contact.html">Contact</a>
