--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
                     <a href="#">Milan van Deelen</a>
-                    <a href="#">Michael Davelaar</a>
+                    <a href="Michael.html">Michael Davelaar</a>
                     <a href="#">Yvan van Dijk</a>
                     <a href="#">Goed Doel</a>
                 </div>
