--- a/goeddoel.html
+++ b/goeddoel.html
@@ -28,13 +28,13 @@
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
-                    <a href="#">Goed Doel Michael</a>
+                    <a href="GoedDoelMichael.html">Goed Doel Michael</a>
                 </div>
             </div>
             <div class="dropdown">
                 <button class="dropbtn">waarom</button>
                 <div class="dropdown-content">
-                    <a href="#">waarom dit Doel Michael</a> 
+                    <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
                     <a href="#">waarom dit Doel Milan</a>   
                     <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
                     <a href="#">waarom dit spel Michael</a>  
