--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transparent Navbar</title>
+    <title>Welkom</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
-                    <a href="#">Goed Doel Michael</a>
+                    <a href="GoedDoelMichael.html">Goed Doel Michael</a>
                 </div>
             </div>
             <a href="contact.html">Contact</a>
