--- a/GoedDoelMichael.html
+++ b/GoedDoelMichael.html
@@ -35,7 +35,7 @@
             <div class="dropdown">
                 <button class="dropbtn">waarom</button>
                 <div class="dropdown-content">
-                    <a href="#">waarom dit Doel Michael</a> 
+                    <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
                     <a href="#">waarom dit Doel Milan</a>   
                     <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
                     <a href="#">waarom dit spel Michael</a>  
