--- a/waaromdoel.html
+++ b/waaromdoel.html
@@ -28,7 +28,7 @@
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
-                    <a href="#">Goed Doel Michael</a>
+                    <a href="GoedDoelMichael.html">Goed Doel Michael</a>
                 </div>
             </div>
             <div class="dropdown">
