--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="about.html">Pong</a>
-                <a href="#">Snake</a>
+                <a href="#">Pong</a>
+                <a href="game.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
         </div>
@@ -30,6 +30,17 @@
                     <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="#">Goed Doel Milan</a>
                     <a href="GoedDoelMichael.html">Goed Doel Michael</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Waarom</button>
+                <div class="dropdown-content">
+                    <a href="#">Waarom dit Doel Michael</a> 
+                    <a href="#">Waarom dit Doel Milan</a>   
+                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
+                    <a href="#">Waarom dit spel Michael</a>  
+                    <a href="#">Waarom dit spel Milan</a> 
+                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
