--- a/WaaromDoelMichael.html
+++ b/WaaromDoelMichael.html
@@ -27,7 +27,7 @@
                     <a href="Michael.html">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel.html">Goed Doel Yvan</a>
-                    <a href="#">Goed Doel Milan</a>
+                    <a href="goeddoel-milan.html">Goed Doel Milan</a>
                     <a href="GoedDoelMichael.html">Goed Doel Michael</a>
                 </div>
             </div>
