--- a/milan.html
+++ b/milan.html
@@ -27,7 +27,7 @@
                     <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
-                    <a href="#">Goed Doel Milan</a>
+                    <a href="goeddoel-milan.html">Goed Doel Milan</a>
                     <a href="#">Goed Doel Michael</a>
                 </div>
             </div>
